Closed Bug 737959 Opened 12 years ago Closed 12 years ago

Debug builds can no longer be launched with MallocStackLogging

Categories

(Core :: XPCOM, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla14

People

(Reporter: ehsan.akhgari, Unassigned)

Details

Attachments

(1 file)

ehsanakhgari:~/moz/mozilla-central (malloc_log_startup_crash) [02:31:33]$ MallocStackLogging= obj-ff-dbg/dist/NightlyDebug.app/Contents/MacOS/firefox
firefox(10779) malloc: recording malloc stacks to disk using standard recorder
firefox(10779) malloc: stack logs being written into /tmp/stack-logs.10779.firefox.EUZR2l.index
Assertion failure: malloc_logger == __null, at /Users/ehsanakhgari/moz/mozilla-central/xpcom/base/nsStackWalk.cpp:154
Segmentation fault
Attachment #608068 - Flags: review?(benjamin)
Attachment #608068 - Flags: review?(benjamin) → review+
https://hg.mozilla.org/mozilla-central/rev/e8d4d50cee76
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: