Bug 737959 - Fix the startup crash with MallocStackLogging; r=bsmedberg